# Enderfga

./: .gitattributes  README.md
AI programing language/: C语言，matlab，python的异同.xmind  README.md  人工智能编程语言.md  人工智能编程语言.xmind
AIcifar10/: README.md  extension.ipynb  main.py  pre_data.py  requirements.txt  torch.ipynb
APMCM/: ControlSheet.tex  README.md  apmcmthesis.cfg  apmcmthesis.cls  main.tex  makepdf.bat
Backup/: README.md
Emotion/: 2021ise.ipynb  README.md  requirements.txt  submission.csv
Hackathon/: README.md  hackathon.lnk  main.html  style.css
Introduction_to_multi_agent_control/: README.md  project instruction.docx
MCM/: README.md  books.bib  document.tex  envs.py  main.py
NYU/: README.md  regression.ipynb
Objective_Detection/: data_pre.py  pred_a.txt  pred_b.txt  requirements.txt  result_get.py  train.ipynb
Plant Pathology-2021/: README.md  test.py  test_label_pre.csv  toy.ipynb  train.ipynb
Report/: 20354027-方桂安-思修报告.docx  20354027_方桂安_发光学与发光材料文献阅读报告.docx  20354027方桂安-加速器.docx  20354027方桂安习思想.docx  20354027方桂安吉他.docx  20354027方桂安管乐.docx  20354027方桂安马原.docx  (+5 more)
Report/OS_lab/2/Tri-Stage Memory/: CMakeLists.txt  CalcInfo.cpp  CreateCache.cpp  CreateMemory.cpp  FileTest.cpp  GetInput.cpp  InitVariables.cpp  LRU.cpp  Makefile  PrintOutput.cpp  base.cpp  base.h  main.cpp
Report/OS_lab/2/Tri-Stage Memory/TestData/: jiangxin.trace  swim.trace
Robot/1/trajectory_following/: CMakeLists.txt
Robot/1/trajectory_following/launch/: cycle.launch  rectangle.launch  star.launch
Robot/1/trajectory_following/src/: cycle.cpp  hexagon.cpp  star.cpp
(+1177 files in other folders)
